# Introduction-to-Automatic-Driving-Based-on-TORCS

./: README.md
巡线1/driver_cruise/Release/: driver_cruise.exp
巡线1/driver_cruise/driver_cruise/: driver_cruise.cpp  driver_cruise.vcxproj
巡线1/vs2019/lib/: opencv_core411.lib  opencv_dnn411.lib  opencv_flann411.lib  opencv_objdetect411.lib  opencv_ts411.lib  opencv_video411.lib
巡线2/driver_cruise/: driver_cruise.sln
巡线2/driver_cruise/driver_cruise/: CMakeLists.txt  Common_OpenCV.h  class_Visualization.cpp  driver_cruise.cpp  driver_cruise.h  driver_cruise.vcxproj  driver_cruise.vcxproj.filters
巡线2/driver_cruise/driver_cruise/Release/: driver_cruise.dll.recipe
巡线2/driver_cruise/driver_cruise/Release/driver_cruise.tlog/: driver_cruise.lastbuildstate  driver_cruise.write.1u.tlog  link.read.1.tlog
巡线2/vs2019/lib/: ade.lib  opencv_calib3d411.lib  opencv_gapi411.lib  opencv_imgcodecs411.lib  opencv_imgproc411.lib  opencv_ml411.lib  opencv_python2.lib  opencv_stitching411.lib
泊车/driver_parking/: driver_parking.sln
泊车/driver_parking/Release/: driver_parking.dll.recipe  (+2 more)
泊车/driver_parking/driver_parking/: CMakeLists.txt  class_Visualization.h  driver_parking.cpp  driver_parking.def  driver_parking.h  driver_parking.vcxproj  driver_parking.vcxproj.filters
泊车/driver_parking/driver_parking/Debug/: driver_parking.dll.recipe  driver_parking.ilk  vc142.idb
泊车/driver_parking/driver_parking/Debug/driver_parking.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  driver_parking.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+19 files in other folders)
